# TXN-Gateway-Monitor-AWS

./: .gitignore  .pre-commit-config.yaml  README.md  TXN_Gateway_Monitor_Proyecto.md
.github/workflows/: ci.yml  deploy.yml
docs/: ADR-001-sqs-vs-kinesis.md  ADR-002-fastapi-vs-flask.md  ARQUITECTURA.md  runbook.md
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: AlertBanner.tsx  Dashboard.tsx  MetricsChart.tsx  SimulatorPanel.tsx  TransactionTable.tsx
infra/: main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf
lambdas/dlq_handler/: handler.py
lambdas/reconcile/: handler.py
lambdas/txn_processor/: handler.py
scripts/: check_health.sh  seed_dynamodb.py  simulate_events.py
services/gateway-service/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/gateway-service/src/gateway/: config.py  main.py
services/gateway-service/src/gateway/exceptions/: handlers.py
services/gateway-service/src/gateway/middleware/: logging.py
services/gateway-service/src/gateway/models/: transaction.py
services/gateway-service/src/gateway/repositories/: txn_repository.py
services/gateway-service/src/gateway/routers/: events.py  health.py  metrics.py
services/gateway-service/src/gateway/services/: dynamodb_service.py  sns_service.py
services/gateway-service/tests/: conftest.py
services/gateway-service/tests/integration/: test_api.py
services/gateway-service/tests/unit/: test_repositories.py  test_services.py
(+19 files in other folders)
